--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,15 +14,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v2
       with:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ../../
+      run: |
+      pwd
+      ls -la
+      go build -v ../../
 
     - name: Test
       run: go test -v ../../
