--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         pwd
         ls -la
-        go build -v
+        go build -v main.go
 
     - name: Test
       run: go test -v
